# AED_Proyecto

./: CMakeLists.txt  Mainwindow.cpp  Mainwindow.h  Node.h  README.md  SparseMatrix.cpp  SparseMatrix.h  main.cpp
